# internal/services/smodels/epoch.go
@@ -1,0 +1,11 @@
+package smodels
+
+import "time"
+
+type EpochInfo struct {
+	Epoch        uint64
+	SlotsInEpoch uint64
+	SPS          float64
+	EndEpoch     time.Time
+	Progress     uint8
+}
